--- a/src/styles.css
+++ b/src/styles.css
@@ -245,21 +245,22 @@ button {
 }
 
 .images {
-  display: flex;
-  flex-wrap: wrap;
-  max-width: var(--w-min-content);
-  margin: 0 auto;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .img-col {
-  margin: 10px;
-  width: 134px;
+  margin: 0 5vw;
+  box-sizing: border-box;
+  min-width: 20rem;
+}
+.image {
+  width: 100%;
 }
 .img-col img {
   width: 100%;
 }
 .img-txt {
-  padding: var(--s) var(--xs);
+  font-size: var(--fs-s);
+  padding: 1.8em 0;
 }
 .columns {
   max-width: 1440px;
